syntax = "proto2";

package uk.gov.homeoffice.drt.protobuf.messages;

import "Prediction.proto";

message FlightStateSnapshotMessage {
    repeated FlightMessage flightMessages = 1;
    optional FeedStatusesMessage statuses = 2;
}

message FlightMessage {
    optional string Operator = 1;
    optional string Gate = 2;
    optional string Stand = 3;
    optional string Status = 4;
    optional int32 MaxPax = 5;
    optional string RunwayID = 8;
    optional string BaggageReclaimId = 9;
    optional string AirportID = 11;
    optional string Terminal = 12;
    optional string ICAO = 13;
    optional string IATA = 14;
    optional string Origin = 15;
    optional int64 PcpTime = 16;
    optional int64 Scheduled = 17;
    optional int64 Estimated = 18;
    optional int64 Touchdown = 19;
    optional int64 EstimatedChox = 20;
    optional int64 ActualChox = 21;
    repeated string FeedSources = 23;
    optional int64 CarrierScheduled = 24;
    optional int32 RedListPax = 26;
    optional int64 ScheduledDeparture = 27;
    repeated TotalPaxSourceMessage TotalPax = 30;
    optional PredictionsMessage Predictions = 31;
    optional string PreviousPort = 32;
    optional int32 ActPax__OLD = 6;
    optional int32 TranPax__OLD = 7;
    optional int32 FlightID__OLD = 10;
    optional int32 LastKnownPax__OLD = 22;
    optional int32 ApiPax__OLD = 25;
    optional int64 PredictedTouchdown__OLD = 28;
    optional PredictionLongMessage PredictedTouchdown2__OLD = 29;
}

message UniqueArrivalMessage {
    optional int32 number = 1;
    optional string terminalName = 2;
    optional int64 scheduled = 3;
    optional string origin = 4;
}

message FlightsDiffMessage {
    optional int64 createdAt = 1;
    repeated UniqueArrivalMessage removals = 4;
    repeated FlightMessage updates = 3;

    repeated int32 removals_OLD = 2;
}

message FeedStatusesMessage {
    repeated FeedStatusMessage statuses = 2;
    optional int64 lastSuccessAt = 3;
    optional int64 lastFailureAt = 4;
    optional int64 lastUpdatesAt = 5;

    optional string name__OLD = 1;
}

message FeedStatusMessage {
    optional int64 date = 1;
    optional int32 updates = 2;
    optional string message = 3;
}

message TotalPaxSourceMessage {
    optional string feedSource = 2;
    optional PassengersMessage passengers = 3;

    optional int32 pax__OLD = 1;
}

message PassengersMessage {
    optional int32 actual = 1;
    optional int32 transit = 2;
}
